--- a/src/components/welcome-text/index.css
+++ b/src/components/welcome-text/index.css
@@ -50,3 +50,10 @@ h1 {
   text-transform: uppercase;
   padding: 3px;
 }
+
+@media screen and (min-width: 775px) {
+  .container-welcome {
+    width: 50vw;
+    height: 100vh;
+  }
+}
