--- a/src/components/welcome-text/index.css
+++ b/src/components/welcome-text/index.css
@@ -51,6 +51,10 @@ h1 {
   padding: 3px;
 }
 
+.create-container button:hover {
+  cursor: pointer;
+}
+
 @media screen and (min-width: 775px) {
   .container-welcome {
     width: 50vw;
