Added ability to sign in and fixed error messaging to dismiss on click anywhere

--- a/src/components/error-message/index.css
+++ b/src/components/error-message/index.css
@@ -7,6 +7,13 @@
   padding: 2rem 0;
   margin: none;
 }
+
+.test {
+  position: fixed;
+  width: 100vw;
+  height: 200vh;
+}
+
 .error-container {
   background-color: var(--grey);
   border: 3px solid var(--purple);
