--- a/src/components/error-message/index.css
+++ b/src/components/error-message/index.css
@@ -8,7 +8,7 @@
   margin: none;
 }
 
-.test {
+.back-drop {
   position: fixed;
   width: 100vw;
   height: 200vh;
@@ -24,6 +24,7 @@
   align-items: center;
   width: 55vw;
   padding: 1rem;
+  z-index: 2;
 }
 
 .error-container p {
