added button to add memories and made responsive

--- a/src/components/memories-component/index.css
+++ b/src/components/memories-component/index.css
@@ -10,6 +10,12 @@
 .memory-list {
   display: flex;
   align-self: stretch;
+  justify-content: center;
+  align-items: center;
+}
+
+.memory-list h1 {
+  text-align: center;
 }
 
 .memory-component {
