--- a/src/components/Home-welcome/index.css
+++ b/src/components/Home-welcome/index.css
@@ -11,3 +11,10 @@
   width: 60%;
   font-size: 40px;
 }
+
+@media screen and (min-width: 775px) {
+  .home-welcome-container h1 {
+    max-width: 540px;
+    font-size: 66px;
+  }
+}
