--- a/src/components/backdrop/index.css
+++ b/src/components/backdrop/index.css
@@ -1,7 +1,21 @@
+.parent {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.children {
+  z-index: 3;
+}
+
 .back-drop {
   position: fixed;
+  height: 100vh;
   width: 100vw;
-  height: 200vh;
   background-color: black;
   opacity: 0.2;
+  z-index: 0;
 }
