--- a/src/components/memories-component/index.css
+++ b/src/components/memories-component/index.css
@@ -7,13 +7,6 @@
   height: 45vh;
 }
 
-.memory-list {
-  display: flex;
-  align-self: stretch;
-  justify-content: center;
-  align-items: center;
-}
-
 .memory-list .no-memories {
   text-align: center;
 }
@@ -23,4 +16,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 2rem;
+}
+
+.other-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (min-width: 775px) {
+  .memory-list {
+    display: grid;
+    grid-template-columns: repeat(2, 210px);
+    grid-template-rows: repeat(2, 220px);
+
+    column-gap: 50px;
+    row-gap: 50px;
+  }
 }
