--- a/src/components/backdrop/index.css
+++ b/src/components/backdrop/index.css
@@ -1,14 +1,16 @@
 .parent {
-  position: fixed;
+  position: absolute;
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  top: -10vh;
+  z-index: 6;
 }
 
 .children {
-  z-index: 3;
+  z-index: 30;
 }
 
 .back-drop {
