--- a/src/components/memories-component/index.css
+++ b/src/components/memories-component/index.css
@@ -5,6 +5,7 @@
   align-items: center;
   margin: 1rem;
   height: 45vh;
+  z-index: 5;
 }
 
 .memory-list .no-memories {
@@ -13,10 +14,10 @@
 
 .memory-component {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 5vh;
 }
 
 .other-items {
@@ -26,7 +27,7 @@
   align-items: center;
 }
 
-@media screen and (min-width: 775px) {
+@media screen and (min-width: 875px) and (min-height: 840px) {
   .memory-list {
     display: grid;
     grid-template-columns: repeat(2, 210px);
@@ -34,5 +35,11 @@
 
     column-gap: 50px;
     row-gap: 50px;
+  }
+}
+
+@media screen and (min-height: 460px) {
+  .memory-component {
+    flex-direction: column;
   }
 }
