Add and display pictures functions implemeneted

--- a/src/components/image-carousel/index.css
+++ b/src/components/image-carousel/index.css
@@ -1,4 +1,10 @@
 .image-carousel {
+  background-color: var(--purple);
+  width: 456px;
+
   display: flex;
+  gap: 2rem;
+  padding: 1rem;
+  align-items: center;
   overflow: scroll;
 }
