Fixed issue with grid for images going off screen and notecards not loading

--- a/src/components/backdrop/index.css
+++ b/src/components/backdrop/index.css
@@ -11,6 +11,12 @@
 
 .children {
   z-index: 30;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 95vw;
+  overflow: hidden;
 }
 
 .back-drop {
