--- a/src/components/note-description-component/index.css
+++ b/src/components/note-description-component/index.css
@@ -1,5 +1,6 @@
 .note-desc-comp {
   background-color: var(--white);
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
   justify-content: center;
