--- a/src/pages/Memory/index.css
+++ b/src/pages/Memory/index.css
@@ -1,10 +1,33 @@
-.page-container {
-  background-color: var(--dark-blue);
+.memory-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  justify-content: center;
+  background-color: var(--dark-blue);
+}
+
+.carousel {
+  justify-self: center;
+  align-self: center;
+}
+
+.header {
+  display: grid;
+  grid-template-rows: 1;
+  grid-template-columns: [begin] 1rem [row-1] 50px [row-2] 1rem [row-3] 200px [row-4] 1rem [row-5] 50px [row-6] 1rem [end];
+  margin-top: 1rem;
+}
+
+.header div {
+  display: flex;
   align-items: center;
-  padding: 1rem 0;
-  max-width: 100vw;
+  justify-content: center;
+}
+
+.child1 {
+  grid-column-start: row-1;
+  grid-column-end: row-2;
+}
+
+.child2 {
+  grid-column-start: row-3;
+  grid-column-end: row-5;
 }
