--- a/src/components/confirm-message/index.css
+++ b/src/components/confirm-message/index.css
@@ -16,16 +16,22 @@
 
 .buttons {
   width: 50%;
-  display: flex;
-  justify-content: space-between;
+  margin-top: 25%;
 }
 
 .buttons button {
   background: none;
   border: none;
-  margin-bottom: 15px;
+  margin: 0 25%;
 }
 
 .buttons button:hover {
   cursor: pointer;
+}
+
+[data-testid="confirm-message"] {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 0;
 }
