--- a/src/components/page-title/index.css
+++ b/src/components/page-title/index.css
@@ -1,6 +1,7 @@
 .page-title {
   background-color: var(--purple);
-  height: 40px;
+  max-height: 80px;
+  height: fit-content;
   width: 200px;
   display: flex;
   justify-content: center;
