--- a/src/components/page/index.css
+++ b/src/components/page/index.css
@@ -8,3 +8,11 @@
   padding: 1rem 0;
   max-width: 100vw;
 }
+
+@media screen and (min-width: 1400px) {
+  .page-container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+  }
+}
