--- a/src/pages/Memory/index.css
+++ b/src/pages/Memory/index.css
@@ -31,3 +31,9 @@
   grid-column-start: row-3;
   grid-column-end: row-5;
 }
+
+@media screen and (min-width: 1400px) {
+  section.carousel {
+    transform: translateX(-25px);
+  }
+}
