--- a/src/components/image/index.css
+++ b/src/components/image/index.css
@@ -9,6 +9,10 @@
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
+.single-image-container {
+  position: absolute;
+}
+
 @media screen and (min-width: 717px) {
   .firebase-image {
     max-width: 267px;
