Started changing color scheme

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 :root {
   --dark-blue: #4f646f;
   --black: #535657;
-  --purple: #b7adcf;
+  --purple: #b5c0d0;
   --grey: #dee7e7;
-  --white: #f4faff;
+  --white: #f5e8dd;
   --red: #e4572e;
-  --green: #80ed99;
-  --pink: #fcd3de;
+  --green: #ccd3ca;
+  --pink: #eed3d9;
 }
